[FEAT] 게시글 수정, 삭제 기능 개발

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 application.yml
-
+application.properties
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,windows,gradle,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,windows,gradle,java
